--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@stripe/stripe-js": "^3.2.0",
     "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
