--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@stripe/stripe-js": "^3.2.0",
     "cloudinary": "^2.0.3",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
@@ -8,6 +7,7 @@
     "express": "^4.18.3",
     "express-fileupload": "^1.4.3",
     "mongoose": "^8.2.1",
+    "stripe": "^14.23.0",
     "uid2": "^1.0.0"
   },
   "name": "vinted",
